@@ -24,7 +24,7 @@
 // Homunculus setting (Note 3)
 // Activates various 'quirks' that makes them behave unlike normal characters.
 // 0x001: Can't be targetted by support skills (except for their master)
-// 0x002: Immunity to land skills
+
 // 0x004: Mobs will always go after them instead of players until attacked
 // 0x008: Copy their master's speed on spawn/map-change
 // 0x010: They display luk/3+1 instead of their actual critical in the
