@@ -27,6 +27,9 @@
 	4425 Atros_Card			Chance that for 10 seconds your aspd will increase by 100% while attacking.
 
 ========================
+
+09/14
+	* Gravitional Field is now a MISC type of attack. [Skotlex]
 09/13
 	* Rev. 11191 Added a few more items. (idRO RIC items, etc) [L0ne_W0lf]
 	- RIC Stat Boost items will only last 1 minute until we have a proper time.
